Deployment target for macOS 11+ does not follow minor version bumps https://bugs.webkit.org/show_bug.cgi?id=233906

Patch by Elliott Williams <emw@apple.com> on 2021-12-13
Reviewed by Alexey Proskuryakov.
Source/bmalloc:

* Configurations/DebugRelease.xcconfig:

Source/JavaScriptCore:

* Configurations/DebugRelease.xcconfig:

Source/WebCore:

Changes the deployment target for macOS 11 and above to use the default SDK version, instead
of looking up a version using TARGET_MAC_OS_X_VERSION_MAJOR.

Prior to macOS 11, the deployment target did NOT change between minor versions (e.g.
"10.15" was the deployment target for all builds of 10.15.x). Now, minor releases may
change the deployment target, so we cannot rely solely on the MAC_OS_X_VERSION_MAJOR to
determine what deployment target to build for.

Since the deployment target may change within different versions of a major release,
TARGET_MAC_OS_X_VERSION_MAJOR is no longer useful for selecting a deployment target. It
should be considered read-only. To build for a non-default macOS version, set the
deployment target directly.

Reverts changes made in https://commits.webkit.org/230363@main, now that Xcode has been
fixed in rdar://problem/70185899.

* Configurations/DebugRelease.xcconfig:
* platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::variationAxes): Removes a defensive unguarded-availability pragma, now that the
underlying issue is fixed.

Source/WebGPU:

* Configurations/DebugRelease.xcconfig:

Source/WebInspectorUI:

* Configurations/DebugRelease.xcconfig:

Source/WebKit:

* Configurations/DebugRelease.xcconfig:

Source/WTF:

* Configurations/DebugRelease.xcconfig:
* wtf/PlatformHave.h: Add feature define which has been public since macOS 11.0


Canonical link: https://commits.webkit.org/245182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286958 268f45cc-cd09-0410-ab3c-d52691b4dbfc